# Sui

./: .gitignore  CHANGELOG.md  LICENSE  Main.py  README.md  StopApp.bat  deploy.bat  pyproject.toml  requirements.txt  setup_venv.bat  web.config
.streamlit/: config.toml
app/: __init__.py  auth.py  ui.py  utils.py
app/core/: __init__.py  admin_defaults.py  checkpoint.py  config.py  log_reader.py  logging.py  roles.py  rules.py
assets/: style.css
config/: admin_defaults.json
pages/: admin_app_changes.py  admin_changelog.py  admin_console.py  admin_log_viewer.py  admin_validation_defaults.py
resource/: manning_template.xlsx
scripts/: patch_keycloak_bundle.py
